# corner

./: .env  .eslintrc.json  .gitignore  .prettierrc.js  README.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.husky/: pre-commit  pre-push
client/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
client/capabilities/: default.json
client/icons/: icon.icns
client/src/: cache.rs  config.rs  files.rs  keyboard_shortcuts.rs  lib.rs  main.rs  models.rs  speech.rs  utils.rs
client/src/api/: chat.rs  mod.rs  speech.rs
client/src/plugins/: mod.rs  speech.rs
src/: App.tsx  main.rs  main.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  main.rs  models.rs  plugin.rs  preferences.rs  profile.rs
src/assets/: fonts.css
src/components/: AudioControls.tsx  AudioPlayer.tsx  ChatActions.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessageContextMenu.tsx  ChatNoteOverlay.tsx  ChatTaskbar.tsx  ChatView.tsx  Citations.tsx  CommandMenu.tsx  Features.tsx  FileLinkMenu.tsx  FileMenu.tsx  FilePreview.tsx  FileUpload.tsx  FileUploader.tsx  FileViewer.tsx  Footer.tsx  InfoModal.tsx  KnowledgeGraph.tsx  LinkedItems.tsx  LinkedNotes.tsx  LinkedThreads.tsx  ModelIcon.tsx  ModelMention.tsx  ModelSelector.tsx  NoteContextMenu.tsx  NoteEditor.tsx  NoteLinkMenu.tsx  NoteList.tsx  PluginDocs.tsx  Preferences.tsx  ReferenceMenu.tsx  ResizeObserver.tsx  SearchPanel.tsx  SessionModal.tsx  Shortcuts.tsx  Sidebar.tsx  SidebarTabs.tsx  (+13 more)
src/components/icons/: ClaudeIcon.tsx  ElevenLabsIcon.tsx  GoogleIcon.tsx  OpenAIIcon.tsx  PerplexityIcon.tsx  XAIIcon.tsx
src/components/preferences/: Actions.tsx  ApiKeys.tsx  Appearance.tsx  Connections.tsx  Models.tsx  Plugins.tsx  Profile.tsx  Shortcuts.tsx  Storage.tsx  VoiceSettings.tsx
src/components/ui/: alert.tsx  avatar.tsx  button.tsx  card.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  sonner.tsx  switch.tsx  textarea.tsx  toast.tsx  tooltip.tsx
src/hooks/: use-text-highlight.ts  usePreferences.ts
src/lib/: api.ts  apiKeys.ts  fileCache.ts  fileHandlers.ts  models.ts  plugins.ts  rateLimitManager.ts  shortcuts.ts  storage.ts  tauri.ts  toast.ts  utils.ts
src/lib/extensions/: CustomLink.ts  WikiLink.ts  WikiLink.tsx
src/store/: loadingStore.ts
src/styles/: globals.css
src/types/: api.ts
