[package]
name = "Corner"
version = "0.1.0"
description = "Corner"
authors = ["you"]
license = ""
repository = ""
default-run = "Corner"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "corner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["macos-private-api"] }
reqwest = { version = "0.11.20", features = ["stream", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15"
url = "2.5.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-upload = "2.0.0"
base64 = "0.21"
mime_guess = "2.0"
dirs = "5.0.1"
tauri-plugin-process = "2.0.0"
uuid = { version = "1.7.0", features = ["v4"] }
tauri-plugin-os = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
cpal = "0.15.2"
whisper-rs = "0.8.0"
bytes = "1.5.0"
anyhow = "1.0"
futures-util = "0.3.28"
regex = "1.9.5"
once_cell = "1.18.0"
tauri-plugin-tauri = "2.0.0-beta.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
