[package]
name = "corner"
version = "0.1.0"
description = "Corner App"
authors = ["you"]
license = ""
repository = ""
default-run = "corner"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.79"

[features]
custom-protocol = ["tauri/custom-protocol"]
