[package]
name = "corner"
version = "0.1.0"
description = "Corner App"
authors = ["you"]
license = ""
repository = ""
default-run = "corner"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-alpha.18", features = [ "shell-all", "dialog-all" ] }
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.79"
chrono = "0.4.26"
image = "0.24.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
